force-app/main/default/objects/UserExpense__c/UserExpense__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>User Expenses</relationshipLabel>
        <relationshipName>UserExpenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Expenses</relationshipLabel>
        <relationshipName>UserExpenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountPaid__c</fullName>
        <label>Amount Paid</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <housekeepingPolicy>
        <allowDelete>true</allowDelete>
        <allowReparent>true</allowReparent>
        <masterDetail>false</masterDetail>
    </housekeepingPolicy>
    <label>User Expense</label>
    <nameField>
        <displayFormat>UE-{0000000000}</displayFormat>
        <label>User Expense Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>