force-app/main/default/objects/UserExpense__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>User Expenses</relationshipLabel>
    <relationshipName>UserExpenses</relationshipName>
    <type>Lookup</type>
</CustomField>