force-app/main/default/objects/UserExpense__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User Expenses</relationshipLabel>
    <relationshipName>UserExpenses</relationshipName>
    <type>Lookup</type>
</CustomField>